salesforce/force-app/main/default/objects/Authora_Evidence__c/Authora_Evidence__c.object-meta.xml
<CustomObject>
    <label>Authora Evidence</label>
    <nameField><displayFormat>EVD-{000000}</displayFormat><label>Evidence Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Authora Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>