salesforce/force-app/main/default/objects/Authora_Evidence__c/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName><label>Authorization</label>
    <referenceTo>Authora_Authorization__c</referenceTo><relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence</relationshipName><required>true</required><type>MasterDetail</type>
</CustomField>