salesforce/force-app/main/default/objects/Authora_Evidence__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName><label>Evidence Type</label><required>true</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Clinical Note</fullName><default>false</default><label>Clinical Note</label></value>
        <value><fullName>Test Result</fullName><default>false</default><label>Test Result</label></value>
        <value><fullName>Coverage Document</fullName><default>false</default><label>Coverage Document</label></value>
        <value><fullName>Other</fullName><default>true</default><label>Other</label></value>
    </valueSetDefinition></valueSet>
</CustomField>