salesforce/force-app/main/default/objects/Authora_Evidence__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName><defaultValue>false</defaultValue><label>Verified</label><type>Checkbox</type>
</CustomField>